Fixed screen not refreshing (now firsts refreshes are forced). Using only stdscr instead of multiple WINDOW(s). Frog cannot go outside border. Added DEBUG constant do see frog coordinates in screen.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "sprite.h": "c",
         "functionsp.h": "c",
         "stddef.h": "c",
-        "curses.h": "c"
+        "curses.h": "c",
+        "structs.h": "c"
     }
 }
