Added frog movement in thread-version. First tests  with mutex and thread synchronization.

--- a/versione_thread/makefile
+++ b/versione_thread/makefile
@@ -1,14 +1,11 @@
 CFLAGS = -g -c
 LIBS = -lncursesw
 
-all: main.c colors.o sprite.o crocList.o functionsT.o settings.o collisionDetector.o menu.o
-	gcc -g main.c sprite.o colors.o crocList.o functionsT.o settings.o collisionDetector.o menu.o $(LIBS) -o game 
+all: main.c colors.o sprite.o functionsT.o settings.o collisionDetector.o menu.o
+	gcc -g main.c sprite.o colors.o functionsT.o settings.o collisionDetector.o menu.o $(LIBS) -lpthread -o game 
 
-functionsT.o: functionsT.c functionsT.h settings.o crocList.o sprite.o structs.h collisionDetector.o
-	gcc $(CFLAGS) functionsT.c
-
-crocList.o: crocList.c crocList.h sprite.o structs.h
-	gcc $(CFLAGS) crocList.c
+functionsT.o: functionsT.c functionsT.h settings.o sprite.o structs.h collisionDetector.o
+	gcc $(CFLAGS) functionsT.c functionsT.h -lpthread
 
 collisionDetector.o: collisionDetector.c collisionDetector.h sprite.o
 	gcc $(CFLAGS) collisionDetector.c $(LIBS)
