--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,5 @@ game
 .vscode
 # per evitare che la cartella di sviluppo di vscode venga salvata su github
 
-SCORE.txt
-# per non salvare lo score
-
-debug.txt
-# per non salvare il file di debug
+*.txt
+# per non salvare lo score e il file di debug
