--- a/versione_processi/makefile
+++ b/versione_processi/makefile
@@ -1,5 +1,6 @@
 CFLAGS = -g -c
 LIBS = -lncursesw
+# si usa -lncursesw invece di -lncurses perche' si vogliono usare i caratteri UNICODE
 
 all: main.c colors.o sprite.o crocList.o functionsP.o settings.o collisionDetector.o menu.o
 	gcc -g main.c sprite.o colors.o crocList.o functionsP.o settings.o collisionDetector.o menu.o $(LIBS) -o game 
@@ -26,4 +27,4 @@ colors.o: colors.c colors.h
 	gcc $(CFLAGS) colors.c $(LIBS)
 
 clean:
-	rm -f *.o *.gch
+	rm -f *.o *.gch debug.txt
